# opengl-test

./: .gitignore  CMakeLists.txt  Geometry.cpp  Geometry.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  main.cpp
libraries/include/GL/: eglew.h  glxew.h.bak
scene/: dafuq_man.sprite  rectangle.scene  small_triangle.scene
shaders/: fragment.glsl  vertex.glsl
